tests/types/errors/fun_return_mismatch.mochi
fun foo(): int {
  return "hello"
}
